<resources>
    <string name="app_name">ThumbStack Assignment</string>
    <string name="check_your_weather">Check Your Weather</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="today_report">Todays\'s Report</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
</resources>