<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WeatherActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/weather_background_gradient"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/dm_sans_semibold"
            android:text="@string/check_your_weather"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rounded_edit_text">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/cityEditId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@+id/searchBtnId"
                android:background="@null"
                android:hint="@string/enter_city_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/searchBtnId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/icon_search" />
        </RelativeLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/dataLy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_semibold"
                    android:text="@string/today_report"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dateTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="end|center_vertical"
                    android:textColor="@color/white"
                    app:fontFamily="@font/roboto"
                    tools:text="14-Dec-2020" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/weatherDescriptionIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxWidth="@dimen/_130sdp"
                android:maxHeight="@dimen/_130sdp"
                android:src="@drawable/icon_normals" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDescriptionTittleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="Cloudy"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:fontFamily="@font/dm_sans" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tempratureTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:drawableStart="@drawable/icon_temperature"
                android:drawablePadding="@dimen/_16sdp"
                android:text="24\u00B0C"
                android:textColor="@color/white"
                android:textSize="@dimen/_22sdp"
                app:fontFamily="@font/inter_extrabold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/icon_humidity"
                            android:tint="@color/white"

                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/humidityTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:fontFamily="@font/dm_sans_semibold"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp"
                            tools:text="22"

                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:fontFamily="@font/dm_sans_light"
                            android:text="@string/humidity"
                            android:textColor="@color/white"

                            />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/icon_wind_speed"

                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/windSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:fontFamily="@font/dm_sans_semibold"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp"
                            tools:text="22" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:fontFamily="@font/dm_sans_light"
                            android:text="@string/wind_speed"
                            android:textColor="@color/white"

                            />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/white"
        android:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/noDataLy"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:orientation="vertical">



        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/errorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/stat_notify_error"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/oppsTxtId"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Opps !"
            android:textColor="@color/white"
            android:fontFamily="@font/dm_sans_bold"
            android:textSize="@dimen/_16sdp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/messageTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="No Weather Report Available"
            android:textColor="@color/white"
            android:fontFamily="@font/dm_sans"
            android:textSize="@dimen/_14sdp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Retry"
            android:paddingHorizontal="@dimen/_40sdp"
            android:fontFamily="@font/dm_sans_semibold"
            android:background="@drawable/background_button"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center"

            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>